2008-01-30  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* NEWS: 
	Release 2.3.20

2007-03-01  Frederic Crozat  <fcrozat@mandriva.com>

	reviewed by: Dom Lachowicz <cinamod@hotmail.com>

	* art_misc.h: Fix header when included in C++.
	Patch from Goetz Waschk and Laurent Montel.

2007-02-28  Kjartan Maraas  <kmaraas@gnome.org>

	configure.in: Release 2.3.19

2007-02-28  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix a typo introduced with the bug fix
	for bug #131478. Noticed by Yanko Kaneti.

2007-02-26  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: 2.3.18.

2006-12-06  Kjartan Maraas  <kmaraas@gnome.org>

	* .cvsignore:
	* Makefile.am:
	* autogen.sh:
	* configure.in:
	Port to automake 1.9. Patch from Christian Persch.
	Closes bug #131478

2005-10-26  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	Cygwin build fixes from Cygwin Ports maintainer (#317562)

2005-10-05  Dom Lachowicz <cinamod@hotmail.com>

	* art-misc.[ch]: Turn memory-managing macros into proper functions
	instead of preprocessor wrappers around malloc. Win32 ships multiple 
	runtimes, and an art_alloc'd block from one runtime can't be 
	art_free'd by a different runtime.

	* libart.def: Export the 3 new functions
	
2005-05-27  Alexander Larsson  <alexl@redhat.com>

	* art_vpath_bpath.c: (art_vpath_render_bez):
	Handle the case where start and endpoint are very near
	in a better way. (#301750)

	Patch from Bernhard Herzog  

2005-03-24  Tor Lillqvist  <tml@novell.com>

	* art_misc.h (ART_GNUC_PRINTF, ART_GNUC_NORETURN): Use __format__,
	__printf__ and __noreturn__ to avoid warnings in case "format",
	"printf" or "noreturn" are #defined to something else. For example
	GNU libintl.h (at least some versions of it) #defines printf as
	libintl_printf.

2005-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* art_render_gradient.c: (art_render_gradient_radial_render):
	* testart.c:
	* testuta.c: (main): Fix some compiler warnings etc.
