@@ -92,6 +92,15 @@ AC_FUNC_ALLOCA
 
 AC_C_BIGENDIAN
 
+AC_CHECK_SIZEOF(char)
+AC_SUBST(ART_SIZEOF_CHAR, $ac_cv_sizeof_char)
+AC_CHECK_SIZEOF(short)
+AC_SUBST(ART_SIZEOF_SHORT, $ac_cv_sizeof_short)
+AC_CHECK_SIZEOF(int)
+AC_SUBST(ART_SIZEOF_INT, $ac_cv_sizeof_int)
+AC_CHECK_SIZEOF(long)
+AC_SUBST(ART_SIZEOF_LONG, $ac_cv_sizeof_long)
+
 AC_CONFIG_FILES([
 libart-features.h
 Makefile
@@ -100,5 +109,6 @@ libart-2.0-uninstalled.pc
 libart-zip])
 
 AC_CONFIG_FILES([libart-config],[chmod +x libart-config])
+AC_CONFIG_FILES([gen_art_config.sh],[chmod +x gen_art_config.sh])
 
 AC_OUTPUT
