@@ -1,3 +1,11 @@
+2009-01-14  Fridrich Strba  <fridrich.strba@bluewin.ch>
+
+	* gen_art_config.c: remove
+	* gen_art_config.sh.in: add
+	* configure.in, Makefile.am: use a shell script together
+	with autotools to create the art-config.h. This way is cross-compile
+	friendly and gives the same result.
+
 2008-01-30  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
